Various changes - version 1.2.2
- Prevent adding items on entry screens when keyboard enter button is pressed.
- Added fixes for numeric user input passed as string resulting in NaN on tab counters.
- Modified adjustment screen to take into account confirmed shipments for a more acurate shelf quantity.
- Added receipt lists.
- Fixed context issue with cache refresh interval.

--- a/src/pages/about/userguide/userguide.html
+++ b/src/pages/about/userguide/userguide.html
@@ -207,7 +207,8 @@
                 the book quantities are refresh and any items with changes are removed from the list to prevent making adjustments with outdated data.
             </p>
             <p>
-                To adjust stock first scan or enter a location and then an item. The book quantity will be displayed, along with the variance qty.
+                To adjust stock first scan or enter a location and then an item. The shelf & shipped quantity will be displayed, along with the variance qty.
+                The shelf quantity is the quantity on hand, minus the quantity on confirmed shipments (SO Shipped).
                 Scanning each item or adjusting the quantity will recalculate the variance.
                 You can scan a new item or location at any time. If there's a valid item already entered, it's added to the pending list before the new values are updated.
             </p>
