--- a/src/pages/adjustment/tabs/adjustment-enter.html
+++ b/src/pages/adjustment/tabs/adjustment-enter.html
@@ -79,7 +79,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col col-7>Variance:</ion-col>
-                    <ion-col col-5>{{(enteredData.qty - (enteredData.shelfQty + enteredData.shippedQty))}}</ion-col>
+                    <ion-col col-5>{{(enteredData.qty - enteredData.shelfQty)}}</ion-col>
                 </ion-row>
             </ion-col>
             <ion-col col-6 text-right>
