--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -65,18 +65,14 @@
         </ul>
         <h4>Inspiration</h4>
         <p>
-            AcuStock was born out of frustration (most of my applications are) with another un-named proprietary
+            AcuStock was born out of frustration (most of my applications are) with another proprietary
             application which was poorly designed, full of bugs and completely lacking in proper error handing.
-            The application resulted in lots of wasted time, loss of stock integrity and when it was working the speed and user experience was far from optimal.
+            The application resulted in lots of wasted time and loss of stock integrity. Attempts to resolve the issues
+            with the developers dragged on for months and were often ignored.
         </p>
         <p>
-            After much feedback to the developers and vendors I realised that these problems were not going to be fixed
-            in an appropriate amount of time and that there was no viable alternatives to this software.
-            The source code was not available and I was extremely frustrated that I was trapped supporting completely
-            incompetent software which quite frankly should have never made it to production.
-        </p>
-        <p>
-            It was then I decided to write something better in order to create some much needed competition in this space and in turn lift the quality of the available options.
+            It was then I decided to write something better in order to create some much needed competition in this
+            space and in turn lift the quality of the available options.
             Have I achieved that goal? I'll let the users decide for themselves :-)
         </p>
         <p>
