--- a/src/pages/pick-shipments/pick/tabs/pick.html
+++ b/src/pages/pick-shipments/pick/tabs/pick.html
@@ -33,13 +33,16 @@
 </ion-header>
 <ion-content no-padding>
     <div *ngIf="getSuggestedAllocation() != null">
-        <button type="button" ion-button small icon-only style="position: absolute; right: 10px; top: 10px;" (click)="startCameraScanner()">
+        <button *ngIf="this.pickProvider.prefs.getPreference('camera_scan')" type="button" ion-button small icon-only
+                style="position: absolute; right: 10px; top: 10px;" (click)="startCameraScanner()">
             <ion-icon name="barcode"></ion-icon>
         </button>
-        <h6 style="text-align: center; margin-top:15px;">{{getSuggestedAllocation()?.InventoryID?.value}}</h6>
-        <h6 style="text-align: center; margin-top:0;">{{getSuggestedAllocation()?.Description?.value}}</h6>
-        <h6 style="text-align: center; margin-top:0;">Picked {{getTotalPickedQty()}} of
-            {{getSuggestedAllocation()?.TotalRemainingQty}}</h6>
+        <div style="margin: 0 40px;">
+            <h6 style="text-align: center; margin-top:15px;">{{getSuggestedAllocation()?.InventoryID?.value}}</h6>
+            <h6 style="text-align: center; margin-top:0;">{{getSuggestedAllocation()?.Description?.value}}</h6>
+            <h6 style="text-align: center; margin-top:0;">Picked {{getCurrentAllocPickedQty()}} of
+                {{getSuggestedAllocation()?.Qty.value}} (total {{getTotalPickedQty()}}/{{getSuggestedAllocation()?.TotalRemainingQty}})</h6>
+        </div>
     </div>
 
     <div *ngIf="getSuggestedAllocation() == null">
