--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -35,7 +35,7 @@
 
 <ion-content padding style="position: relative;">
     <div>
-        <button type="button" ion-button small icon-only float-right (click)="startCameraScanner()">
+        <button *ngIf="this.receiveProvider.prefs.getPreference('camera_scan')" type="button" ion-button small icon-only float-right (click)="startCameraScanner()">
             <ion-icon name="barcode"></ion-icon>
         </button>
     </div>
