--- a/src/pages/pick-shipments/details/pick-details-list.html
+++ b/src/pages/pick-shipments/details/pick-details-list.html
@@ -39,7 +39,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-8>Item/Location</ion-col>
-            <ion-col col-4 text-right>Picked/Qty</ion-col>
+            <ion-col col-4 class="column-right">Picked/Qty</ion-col>
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding class="list-group" *ngFor="let item of pickProvider.currentShipment.Details">
