--- a/src/pages/pick-shipments/pick/tabs/pick-list.html
+++ b/src/pages/pick-shipments/pick/tabs/pick-list.html
@@ -37,7 +37,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-7>Item/Location</ion-col>
-            <ion-col col-5 text-right>Picked/Total</ion-col>
+            <ion-col col-5 class="column-right">Picked/Total</ion-col>
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding class="list-group" *ngFor="let key of getPendingPicksKeyOrder();">
