--- a/src/pages/pick-shipments/pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments/pick/tabs/unpicked-list.html
@@ -37,7 +37,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-7>Location/Item</ion-col>
-            <ion-col col-5 text-right>Unpicked Qty</ion-col>
+            <ion-col col-5 class="column-right">Unpicked Qty</ion-col>
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding class="list-group" *ngFor="let loc of pickProvider.pickList; let i = index">
