--- a/src/pages/receive/shipment/tabs/list.html
+++ b/src/pages/receive/shipment/tabs/list.html
@@ -37,7 +37,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-6>Locations / Item</ion-col>
-            <ion-col col-6 text-right>Received / Total</ion-col>
+            <ion-col col-6 class="column-right">Received / Total</ion-col>
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding tappable class="list-group"
