--- a/src/pages/receive/shipment/tabs/pending.html
+++ b/src/pages/receive/shipment/tabs/pending.html
@@ -37,7 +37,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-8>Locations / Item</ion-col>
-            <ion-col col-4 text-right>Qty</ion-col>
+            <ion-col col-4 class="column-right">Qty</ion-col>
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding class="list-group" *ngFor="let key of objectKeys(receiveProvider.pendingItems)">
