--- a/src/pages/adjustment/tabs/adjustment-list.html
+++ b/src/pages/adjustment/tabs/adjustment-list.html
@@ -36,7 +36,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-6>Item / Location</ion-col>
-            <ion-col col-6 text-right>Physical / Book Qty</ion-col>
+            <ion-col col-6 class="column-right">Physical / Book Qty</ion-col>
         </ion-row>
         <ion-list class="item-list">
             <ion-item no-margin no-padding tappable class="list-item" *ngFor="let key of objectKeys(adjustmentProvider.pendingItems)" (click)="editItem(adjustmentProvider.pendingItems[key].LocationID, adjustmentProvider.pendingItems[key].InventoryID);">
