--- a/src/pages/count/entry/tabs/count-list.html
+++ b/src/pages/count/entry/tabs/count-list.html
@@ -37,7 +37,7 @@
     <ion-grid>
         <ion-row class="table-header">
             <ion-col col-6><strong>Locations / Item</strong></ion-col>
-            <ion-col col-6 text-right><strong>Counted/Book Qty</strong></ion-col>
+            <ion-col col-6 class="column-right"><strong>Counted/Book Qty</strong></ion-col>
         </ion-row>
         <ion-list no-margin no-padding class="item-list">
             <ion-item no-margin no-padding class="list-item" *ngFor="let key of objectKeys(countProvider.countIndex)" (click)="openCountItem(countProvider.countIndex[key]);">
