Added option to disable automatically adding items to the pending picks list once the required quantity is scanned.

--- a/src/pages/pick-shipments/pick/tabs/pick.html
+++ b/src/pages/pick-shipments/pick/tabs/pick.html
@@ -113,7 +113,7 @@
         <ion-row>
             <ion-col col-6>
                 <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
-                    <ion-col col-7>Available:</ion-col>
+                    <ion-col col-7>Avail.:</ion-col>
                     <ion-col col-5>{{this.itemAvailability[this.enteredData.location].QtyAvailable.value}}</ion-col>
                 </ion-row>
                 <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
