Added location selector to list screen.

--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -66,6 +66,9 @@
                     <ion-label color="primary">To Bin:</ion-label>
                     <ion-input id="location" #location type="text" [(ngModel)]="enteredData.location"
                                (change)="setLocation();" (keypress)="$event.stopPropagation();"></ion-input>
+                    <button type="button" ion-button icon-only item-right (click)="openLocationSelector();">
+                        <ion-icon name="list"></ion-icon>
+                    </button>
                 </ion-item>
             </ion-col>
         </ion-row>
