Various enhancement & preferences for receipt screen
- Added auto add when complete preference.
- Added confirmation to confirm receipts with items still left.
- Added item completed sound.
- Added preference to display prompt when scanned item is different from the current one.

--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -66,7 +66,7 @@
                     <ion-label color="primary">To Bin:</ion-label>
                     <ion-input id="location" #location type="text" [(ngModel)]="enteredData.location"
                                (change)="setLocation();" (keypress)="$event.stopPropagation();"></ion-input>
-                    <button type="button" ion-button icon-only item-right (click)="openLocationSelector();">
+                    <button type="button" ion-button icon-only item-right style="font-size: 18px;" (click)="openLocationSelector();">
                         <ion-icon name="list"></ion-icon>
                     </button>
                 </ion-item>
