--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -60,13 +60,13 @@
                 </ion-item>
             </ion-col>
         </ion-row>
-        <ion-row *ngIf="showLocation">
+        <ion-row>
             <ion-col>
                 <ion-item no-padding>
                     <ion-label color="primary">To Bin:</ion-label>
                     <ion-input id="location" #location type="text" [(ngModel)]="enteredData.location"
                                (change)="setLocation();" (keypress)="$event.stopPropagation();"></ion-input>
-                    <button type="button" ion-button icon-only item-right style="font-size: 18px;" (click)="openLocationSelector();">
+                    <button *ngIf="enteredData.item != ''" type="button" ion-button icon-only item-right style="font-size: 18px;" (click)="openLocationSelector();">
                         <ion-icon name="list"></ion-icon>
                     </button>
                 </ion-item>
