Added cancel form prompt and margin between OK cancel buttons.

--- a/src/pages/adjustment/tabs/adjustment-enter.html
+++ b/src/pages/adjustment/tabs/adjustment-enter.html
@@ -83,8 +83,8 @@
                 </ion-row>
             </ion-col>
             <ion-col col-6 text-right>
+                <button type="button" ion-button small (click)="cancelForm()" style="margin-left: 10px;">Cancel</button>
                 <button type="button" ion-button small (click)="nextItem()">OK</button>
-                <button type="button" ion-button small (click)="resetForm()">Cancel</button>
             </ion-col>
         </ion-row>
     </ion-grid>
