--- a/src/pages/count/entry/tabs/count-enter.html
+++ b/src/pages/count/entry/tabs/count-enter.html
@@ -71,7 +71,7 @@
         </ion-row>
         <ion-row *ngIf="showQty">
             <ion-col col-12 text-right>
-                <button type="button" align-self-end ion-button small (click)="resetForm()">Cancel</button>
+                <button type="button" align-self-end ion-button small (click)="cancelForm()" style="margin-left: 10px;">Cancel</button>
                 <button type="button" align-self-end ion-button small (click)="addCountItem()">OK</button>
             </ion-col>
         </ion-row>
