--- a/src/pages/pick-shipments/pick/tabs/unpicked-list.html
+++ b/src/pages/pick-shipments/pick/tabs/unpicked-list.html
@@ -61,7 +61,7 @@
     <ion-toolbar position="bottom">
         <ion-row>
             <ion-col col-12 text-right>
-                <button type="button" ion-button small (click)="cancelPicks()">Cancel All</button>
+                <button type="button" ion-button small (click)="clearPicks()">Clear</button>
                 <button type="button" ion-button small (click)="confirmPicks()">Commit</button>
             </ion-col>
         </ion-row>
