--- a/src/pages/pick-shipments/pick/tabs/pick.html
+++ b/src/pages/pick-shipments/pick/tabs/pick.html
@@ -122,8 +122,8 @@
                 </ion-row>
             </ion-col>
             <ion-col col-6 text-right>
+                <button type="button" ion-button small (click)="cancelForm()" style="margin-left: 10px;">Cancel</button>
                 <button type="button" ion-button small (click)="addPick()">OK</button>
-                <button type="button" ion-button small (click)="resetForm()">Cancel</button>
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -140,7 +140,7 @@
                 </button>
             </ion-col>
             <ion-col col-8 text-right>
-                <button type="button" ion-button small (click)="cancelPicks()">Cancel All</button>
+                <button type="button" ion-button small (click)="clearPicks()">Clear</button>
                 <button type="button" ion-button small (click)="confirmPicks()">Commit</button>
             </ion-col>
         </ion-row>
