--- a/src/pages/bin-transfer/tabs/enter.html
+++ b/src/pages/bin-transfer/tabs/enter.html
@@ -79,13 +79,16 @@
         </ion-row>
         <ion-row>
             <ion-col col-6>
+                <ion-row *ngIf="showItem && !showQty">
+                    <button type="button" ion-button small (click)="addAllBinContents();">Add All</button>
+                </ion-row>
                 <ion-row *ngIf="showQty && currentLocationItems.hasOwnProperty(enteredData.item);">
                     <ion-col col-7>Available:</ion-col>
-                    <ion-col col-5>{{currentLocationItems[this.enteredData.item].QtyAvailable.value}}</ion-col>
+                    <ion-col col-5>{{currentLocationItems[enteredData.item].QtyAvailable.value}}</ion-col>
                 </ion-row>
                 <ion-row *ngIf="showQty && currentLocationItems.hasOwnProperty(enteredData.item);">
                     <ion-col col-7>On-Hand:</ion-col>
-                    <ion-col col-5>{{currentLocationItems[this.enteredData.item].QtyOnHand.value}}</ion-col>
+                    <ion-col col-5>{{currentLocationItems[enteredData.item].QtyOnHand.value}}</ion-col>
                 </ion-row>
             </ion-col>
             <ion-col col-6 text-right>
